change the invite request icon, status fix, horizontal scroll fix

--- a/src/app/components/analytic-container/analytic-container.component.scss
+++ b/src/app/components/analytic-container/analytic-container.component.scss
@@ -4,7 +4,7 @@ mat-card {
     text-align: center;
     justify-content: center;
     align-content: center;
-    min-width: 100px;
-    width: 200px;
+    min-width: 140px;
+    // width: 200px;
     max-width: 300px;
 }
